Added board size customization

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input id="start-button" type="submit" value="New Game" onclick="setupGame();"/>
 
     <h3>Mines remaining: <span id = 'mines-count'>0</span></h3>
-    <div id='board'></div>
+    <table id='board'></table>
     <br>
     <button id='flag-button'>🚩</button>
 
