--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <script src='minesweeper.js'></script>
 </head>
 <body>
-    <!-- <h1>Minesweeper</h1> -->
-    <p>Number of rows: <input id="number-of-rows" type='number' value="8"/>
+    <p>Number of rows: <input id="number-of-rows" type='number' min="3" max="15" value="8"/>
     </p>
-    <p>Number of columns: <input id="number-of-columns" type='number' value="8"/>
+    <p>Number of columns: <input id="number-of-columns" type='number' min="3" max="15" value="8"/>
     </p>
-    <p>Number of mines: <input id="number-of-mines" type='number' value="5"/>
+    <p>Number of mines: <input id="number-of-mines" type='number' min="1" value="5"/>
     </p>
     <input id="start-button" type="submit" value="New Game" onclick="setupGame();"/>
+
 
     <h3>Mines remaining: <span id = 'mines-count'>0</span></h3>
     <table id='board'></table>
     <br>
-    <button id='flag-button'>🚩</button>
+
+    <button id='flag-button'>
+        <img src="flag.png" width="45px" height="35px" />
+    </button>
 
     
 </body>
