--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
     <link rel="stylesheet" href="minesweeper.css">
+    <script src="settings.js"></script>
     <script src='minesweeper.js'></script>
 </head>
 <body>
